[gd_scene load_steps=6 format=3 uid="uid://16tulcog0cfk"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_yb5mv"]
[ext_resource type="Script" path="res://scripts/audio_catcher.gd" id="2_rm726"]
[ext_resource type="PackedScene" uid="uid://d37wdrgeicey" path="res://scenes/floor_test.tscn" id="3_uouxo"]
[ext_resource type="PackedScene" uid="uid://bi2q08exsihat" path="res://graphics/blender/robot_model1.blend" id="4_hxsor"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_bpo12"]

[node name="Menu" type="Node3D"]
script = ExtResource("1_yb5mv")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.0263518, 0.999653, 0, -0.999653, -0.0263518, 0, 3, 0)

[node name="AudioCatcher" type="Node" parent="."]
script = ExtResource("2_rm726")

[node name="MicPlayer" type="AudioStreamPlayer" parent="AudioCatcher"]
stream = SubResource("AudioStreamMicrophone_bpo12")
volume_db = -5.0

[node name="Floor" parent="." instance=ExtResource("3_uouxo")]

[node name="robot_model1" parent="." instance=ExtResource("4_hxsor")]

[node name="LabelInfo" type="Label" parent="."]
offset_left = 136.0
offset_top = 160.0
offset_right = 1042.0
offset_bottom = 517.0
theme_override_font_sizes/font_size = 50
text = "You should hear yourself talking
if your microphone is set up correctly

WHEN READY:
PRESS ENTER OR SPACE TO START"
horizontal_alignment = 1

[node name="LabelStart" type="Label" parent="."]
visible = false
offset_left = 392.0
offset_top = 252.0
offset_right = 828.0
offset_bottom = 362.0
theme_override_font_sizes/font_size = 80
text = "Starting..."
